# laravel.pv113.com/app/Http/Controllers/Api/AuthController.php
@@ -3,9 +3,14 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Models\User;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Validator;
+use Intervention\Image\Drivers\Gd\Driver;
+use Intervention\Image\ImageManager;
 use Symfony\Component\HttpFoundation\Response;
+use Tymon\JWTAuth\Contracts\Providers\Auth;
 
 class AuthController extends Controller
 {
@@ -70,4 +75,92 @@ class AuthController extends Controller
         }
         return response()->json(['token'=>$token], Response::HTTP_OK);
     }
+
+    /**
+     * @OA\Post(
+     *   path="/api/register",
+     *   tags={"Auth"},
+     *   summary="Register",
+     *   operationId="register",
+     *   @OA\RequestBody(
+     *     required=true,
+     *     description="User registration data",
+     *     @OA\MediaType(
+     *       mediaType="multipart/form-data",
+     *       @OA\Schema(
+     *         required={"name", "email", "password", "phone", "photo"},
+     *         @OA\Property(property="name", type="string"),
+     *         @OA\Property(property="email", type="string"),
+     *         @OA\Property(property="password", type="string"),
+     *         @OA\Property(property="phone", type="string"),
+     *         @OA\Property(property="photo", type="file"),
+     *       )
+     *     )
+     *   ),
+     *   @OA\Response(
+     *     response=200,
+     *     description="Success",
+     *     @OA\MediaType(
+     *       mediaType="application/json"
+     *     )
+     *   ),
+     *   @OA\Response(
+     *     response=422,
+     *     description="Unprocessable Entity"
+     *   )
+     * )
+     */
+    public function register(Request $request)
+    {
+        $validation = Validator::make($request->all(), [
+            'name' => 'required|string',
+            'email' => 'required|email|unique:users,email',
+            'password' => 'required|string|min:6',
+            'phone' => 'nullable|string',
+            'photo' => 'nullable|image|mimes:jpeg,png,jpg,gif|max:104857600', // максимальний розмір 100 МБ
+        ]);
+
+        if ($validation->fails()) {
+            return response()->json($validation->errors(), Response::HTTP_UNPROCESSABLE_ENTITY);
+        }
+
+        $folderName = public_path('upload');
+        if (!file_exists($folderName)) {
+            mkdir($folderName, 0777); // Створити папку з правами доступу 0777
+        }
+
+        $image = $request->file("photo");
+        $imageName = uniqid().".webp";
+        $sizes = [50, 150, 300, 600, 1200];
+        $manager = new ImageManager(new Driver());
+        foreach($sizes as $size) {
+            $fileSave = $size ."_".$imageName;
+            $imageRead = $manager->read($image);
+            $imageRead->scale(width: $size);
+            $path = public_path('upload/'.$fileSave);
+            $imageRead->toWebp()->save($path);
+        }
+
+        $inputs = $request->only('name', 'email', 'password', 'phone');
+        $inputs["photo"] = $imageName;
+        $user = User::create([
+            'name' => $inputs['name'],
+            'email' => $inputs['email'],
+            'password' => Hash::make($inputs['password']),
+            'phone' => $inputs['phone'],
+            'photo' => $inputs['photo'],
+            'email_verified_at' => now(),
+        ]);
+
+        $token = $this->createToken($user);
+
+        return response()->json(['token' => $token], Response::HTTP_OK);
+    }
+    private function createToken($user)
+    {
+        return Auth::login($user);
+    }
+
+
+
 }
